<resources>
    <string name="app_name">Calculator</string>
    <string name="text_result">0</string>
    <string name="text_ac">AC</string>
    <string name="text_plus_minus">±</string>
    <string name="text_percent">%</string>
    <string name="text_divide">÷</string>
    <string name="text_seven">7</string>
    <string name="text_eight">8</string>
    <string name="text_nine">9</string>
    <string name="text_multiply">×</string>
    <string name="text_four">4</string>
    <string name="text_five">5</string>
    <string name="text_six">6</string>
    <string name="text_minus">−</string>
    <string name="text_one">1</string>
    <string name="text_two">2</string>
    <string name="text_three">3</string>
    <string name="text_plus">+</string>
    <string name="text_zero">0</string>
    <string name="text_dicimal">.</string>
    <string name="text_equals">=</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_save_result">Save Result</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_saved">Đã lưu</string>
    <string name="text_error_divide_zero">Error divide zero</string>
    <string name="wrong_format">Sai định dạng</string>
</resources>
