<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <TextView
        android:id="@+id/text_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color_text_result_background"
        android:gravity="end|center"
        android:maxLines="1"
        android:padding="@dimen/dp_8"
        android:text="@string/text_result"
        android:textColor="@color/color_text_result"
        android:textSize="@dimen/sp_38"
        app:layout_constraintBottom_toTopOf="@id/text_ac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_ac"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_ac"
        app:layout_constraintBottom_toTopOf="@id/text_7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_plus_and_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_plus_and_minus"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_plus_minus"
        app:layout_constraintBottom_toTopOf="@id/text_8"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_percent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_ac" />

    <TextView
        android:id="@+id/text_percent"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_percent"
        app:layout_constraintBottom_toTopOf="@id/text_9"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_plus_and_minus" />

    <TextView
        android:id="@+id/text_divide"
        style="@style/calculater_button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_divide"
        app:layout_constraintBottom_toTopOf="@id/text_multiply"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_percent" />

    <TextView
        android:id="@+id/text_7"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_seven"
        app:layout_constraintBottom_toTopOf="@id/text_4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_8"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_eight"
        app:layout_constraintBottom_toTopOf="@id/text_5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_7" />

    <TextView
        android:id="@+id/text_9"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_nine"
        app:layout_constraintBottom_toTopOf="@id/text_6"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_8" />

    <TextView
        android:id="@+id/text_multiply"
        style="@style/calculater_button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_multiply"
        app:layout_constraintBottom_toTopOf="@id/text_minus"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_9" />

    <TextView
        android:id="@+id/text_4"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_four"
        app:layout_constraintBottom_toTopOf="@id/text_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_5"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_five"
        app:layout_constraintBottom_toTopOf="@id/text_2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_4" />

    <TextView
        android:id="@+id/text_6"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_six"
        app:layout_constraintBottom_toTopOf="@id/text_3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_5" />

    <TextView
        android:id="@+id/text_minus"
        style="@style/calculater_button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_minus"
        app:layout_constraintBottom_toTopOf="@id/text_plus"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_6" />

    <TextView
        android:id="@+id/text_1"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_one"
        app:layout_constraintBottom_toTopOf="@id/text_0"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_2"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_two"
        app:layout_constraintBottom_toTopOf="@id/text_0"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_1" />

    <TextView
        android:id="@+id/text_3"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_three"
        app:layout_constraintBottom_toTopOf="@id/text_decimal"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_2" />

    <TextView
        android:id="@+id/text_plus"
        style="@style/calculater_button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_plus"
        app:layout_constraintBottom_toTopOf="@id/text_equals"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_3" />

    <TextView
        android:id="@+id/text_0"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/text_decimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_decimal"
        style="@style/calculater_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_dicimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/text_equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/text_0" />

    <TextView
        android:id="@+id/text_equals"
        style="@style/calculater_button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/text_decimal" />
</android.support.constraint.ConstraintLayout>
